[package]
name = "neon-array-benchmarks"
version = "0.1.0"
description = "Benchmarks for different ways of creating arrays in Neon"
authors = ["Dave Herman <david.herman@gmail.com>"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
